--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,10 +9,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/upload-artifact@v4
 
       - name: Set up Java
-        uses: actions/setup-java@v3
+        uses: actions/upload-artifact@v4
         with:
           java-version: '17'
           distribution: 'temurin'
