--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,19 +9,29 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/upload-artifact@v4
+      # 1️⃣ Download your code
+      - name: Checkout code
+        uses: actions/checkout@v4
 
+      # 2️⃣ Set up Java (THIS WAS WRONG IN YOUR FILE)
       - name: Set up Java
-        uses: actions/upload-artifact@v4
+        uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
 
+      # 3️⃣ Give permission to gradlew
+      - name: Grant execute permission
+        run: chmod +x ./gradlew
+
+      # 4️⃣ Build debug APK
       - name: Build APK
         run: ./gradlew assembleDebug
 
+      # 5️⃣ Upload APK so you can download it
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
           name: waterflow-apk
           path: app/build/outputs/apk/debug/app-debug.apk
+
