--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,35 +1,46 @@
-- name: Set up Android SDK
-  uses: android-actions/setup-android@v2
-  with:
-    api-level: 33
-    build-tools: 33.0.2
-    target: android-33
+name: Build Android APK
 
+on:
+  push:
+    branches: [ "main" ]
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
 
     steps:
-      # 1️⃣ Download your code
+      # 1️⃣ Checkout your code
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # 2️⃣ Set up Java (THIS WAS WRONG IN YOUR FILE)
+      # 2️⃣ Set up Android SDK
+      - name: Set up Android SDK
+        uses: android-actions/setup-android@v2
+        with:
+          api-level: 33
+          build-tools: 33.0.2
+          target: android-33
+
+      # 3️⃣ Set up Java
       - name: Set up Java
-        uses: actions/setup-java@v4
+        uses: actions/setup-java@v3
         with:
           java-version: '17'
           distribution: 'temurin'
 
-      # 3️⃣ Give permission to gradlew
+      # 4️⃣ Give permission to gradlew
       - name: Grant execute permission
         run: chmod +x ./gradlew
 
-      # 4️⃣ Build debug APK
+      # 5️⃣ Build debug APK
       - name: Build APK
         run: ./gradlew assembleDebug
 
-      # 5️⃣ Upload APK so you can download it
+      # 6️⃣ Upload APK
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
           name: waterflow-apk
           path: app/build/outputs/apk/debug/app-debug.apk
+
 
