--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,10 +16,6 @@ jobs:
       # 2️⃣ Set up Android SDK
       - name: Set up Android SDK
         uses: android-actions/setup-android@v2
-        with:
-          api-level: 33
-          build-tools: 33.0.2
-          target: android-33
 
       # 3️⃣ Set up Java
       - name: Set up Java
@@ -40,6 +36,9 @@ jobs:
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
+          name: waterflow-apk
+          path: app/build/outputs/apk/debug/app-debug.apk
+
           name: waterflow-apk
           path: app/build/outputs/apk/debug/app-debug.apk
 
